// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enroll-profile-update fails client side validation with empty required fields 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <span>
      <main
        class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        id="okta-sign-in"
      >
        <div
          class="siwContainer MuiBox-root emotion-2"
        >
          <div
            class="okta-sign-in-header auth-header siwHeader"
          >
            <h1
              class="MuiTypography-root MuiTypography-h1 emotion-3"
            />
          </div>
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="identifier-container MuiBox-root emotion-5"
            >
              <div
                class="identifierContainer MuiBox-root emotion-6"
              >
                <span
                  class="userIconContainer MuiBox-root emotion-7"
                >
                  <svg
                    class="ods-2icygl"
                    fill="none"
                    role="presentation"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="identifier identifierSpan MuiBox-root emotion-7"
                  data-se="identifier"
                >
                  testUser@okta.com
                </span>
              </div>
            </div>
            <div
              class="MuiBox-root emotion-9"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-10"
                role="alert"
              >
                <div
                  class="MuiAlert-icon emotion-11"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-12"
                    data-testid="ErrorOutlineIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiAlert-message emotion-13"
                >
                  We found some errors. Please review the form and make corrections.
                </div>
              </div>
            </div>
            <form
              class="o-form"
              data-se="form"
              novalidate=""
              style="max-width: 100%; word-break: break-word;"
            >
              <div
                class="MuiBox-root emotion-14"
              >
                <div
                  class="MuiBox-root emotion-15"
                >
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h3 emotion-17"
                      data-se="o-form-head"
                    >
                      Sign in
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-15"
                >
                  <div
                    class="MuiBox-root emotion-7"
                  >
                    <label
                      class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required emotion-20"
                      for="userProfile.favoriteSport"
                    >
                      Favorite sport
                      <span
                        aria-hidden="true"
                        class="MuiInputLabel-asterisk MuiFormLabel-asterisk emotion-21"
                      >
                         
                        *
                      </span>
                    </label>
                    <div
                      class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth Mui-focused emotion-22"
                    >
                      <input
                        aria-describedby="userProfile.favoriteSport-error"
                        aria-invalid="true"
                        class="MuiOutlinedInput-input MuiInputBase-input emotion-23"
                        data-se="userProfile.favoriteSport"
                        id="userProfile.favoriteSport"
                        name="userProfile.favoriteSport"
                        type="text"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline emotion-24"
                      >
                        <legend
                          class="emotion-25"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                    <p
                      class="MuiFormHelperText-root Mui-error emotion-26"
                      data-se="userProfile.favoriteSport-error"
                      id="userProfile.favoriteSport-error"
                      role="alert"
                    >
                      This field cannot be left blank
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-15"
                >
                  <div
                    class="MuiBox-root emotion-7"
                  >
                    <label
                      class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required emotion-20"
                      for="userProfile.newAttribute"
                    >
                      Custom attribute
                      <span
                        aria-hidden="true"
                        class="MuiInputLabel-asterisk MuiFormLabel-asterisk emotion-21"
                      >
                         
                        *
                      </span>
                    </label>
                    <div
                      class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth emotion-22"
                    >
                      <input
                        aria-describedby="userProfile.newAttribute-error"
                        aria-invalid="true"
                        class="MuiOutlinedInput-input MuiInputBase-input emotion-23"
                        data-se="userProfile.newAttribute"
                        id="userProfile.newAttribute"
                        name="userProfile.newAttribute"
                        type="text"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline emotion-24"
                      >
                        <legend
                          class="emotion-25"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                    <p
                      class="MuiFormHelperText-root Mui-error emotion-26"
                      data-se="userProfile.newAttribute-error"
                      id="userProfile.newAttribute-error"
                      role="alert"
                    >
                      This field cannot be left blank
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-15"
                >
                  <button
                    class="MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  emotion-37"
                    data-type="save"
                    tabindex="0"
                    type="submit"
                  >
                    Submit
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </main>
    </span>
  </div>
</div>
`;

exports[`enroll-profile-update should render form 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <span>
      <main
        class="auth-container main-container mainViewContainer MuiBox-root emotion-1"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        id="okta-sign-in"
      >
        <div
          class="siwContainer MuiBox-root emotion-2"
        >
          <div
            class="okta-sign-in-header auth-header siwHeader"
          >
            <h1
              class="MuiTypography-root MuiTypography-h1 emotion-3"
            />
          </div>
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="identifier-container MuiBox-root emotion-5"
            >
              <div
                class="identifierContainer MuiBox-root emotion-6"
              >
                <span
                  class="userIconContainer MuiBox-root emotion-7"
                >
                  <svg
                    class="ods-2icygl"
                    fill="none"
                    role="presentation"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="identifier identifierSpan MuiBox-root emotion-7"
                  data-se="identifier"
                >
                  testUser@okta.com
                </span>
              </div>
            </div>
            <form
              class="o-form"
              data-se="form"
              novalidate=""
              style="max-width: 100%; word-break: break-word;"
            >
              <div
                class="MuiBox-root emotion-9"
              >
                <div
                  class="MuiBox-root emotion-10"
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h3 emotion-12"
                      data-se="o-form-head"
                    >
                      Sign in
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-10"
                >
                  <div
                    class="MuiBox-root emotion-7"
                  >
                    <label
                      class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required emotion-15"
                      for="userProfile.favoriteSport"
                    >
                      Favorite sport
                      <span
                        aria-hidden="true"
                        class="MuiInputLabel-asterisk MuiFormLabel-asterisk emotion-16"
                      >
                         
                        *
                      </span>
                    </label>
                    <div
                      class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-17"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiOutlinedInput-input MuiInputBase-input emotion-18"
                        data-se="userProfile.favoriteSport"
                        id="userProfile.favoriteSport"
                        name="userProfile.favoriteSport"
                        type="text"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline emotion-19"
                      >
                        <legend
                          class="emotion-20"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-10"
                >
                  <div
                    class="MuiBox-root emotion-7"
                  >
                    <label
                      class="MuiInputLabel-root MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required emotion-15"
                      for="userProfile.newAttribute"
                    >
                      Custom attribute
                      <span
                        aria-hidden="true"
                        class="MuiInputLabel-asterisk MuiFormLabel-asterisk emotion-16"
                      >
                         
                        *
                      </span>
                    </label>
                    <div
                      class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-17"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiOutlinedInput-input MuiInputBase-input emotion-18"
                        data-se="userProfile.newAttribute"
                        id="userProfile.newAttribute"
                        name="userProfile.newAttribute"
                        type="text"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline emotion-19"
                      >
                        <legend
                          class="emotion-20"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-10"
                >
                  <button
                    class="MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  emotion-30"
                    data-type="save"
                    tabindex="0"
                    type="submit"
                  >
                    Submit
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </main>
    </span>
  </div>
</div>
`;
